kubernetes/tomcat/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: postgresql-dev
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2023-04-16T08:40:09Z"
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: postgresql-dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.2.8
  name: postgresql-dev
  namespace: default
  resourceVersion: "164930"
  uid: 116d2cd9-3f45-4b8a-9538-46d8387ec11c
spec:
  clusterIP: 10.128.124.191
  clusterIPs:
  - 10.128.124.191
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: postgresql-dev
    app.kubernetes.io/name: postgresql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
